add json for gpt questions

--- a/data_cleaning_scripts/script_create_json_for_manual_annotation.ipynb
+++ b/data_cleaning_scripts/script_create_json_for_manual_annotation.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "7c421108-69b2-4a8f-831d-1dad200bf7ed",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "8f69ad0c-e5e7-48e8-a9c6-a81697534cd1",
    "metadata": {},
    "outputs": [
@@ -146,8 +146,8 @@
        "      <th>respondent_full_text</th>\n",
        "      <th>questions_sotomayor_petitioner</th>\n",
        "      <th>questions_sotomayor_respondent</th>\n",
-       "      <th>questions_alito_respondent</th>\n",
        "      <th>questions_alito_petitioner</th>\n",
+       "      <th>questions_alito_respondent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -159,10 +159,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Anthony A. Yang&lt;/speaker&gt;&lt;text&gt; Mr. C...</td>\n",
        "      <td>&lt;speaker&gt;Anthony A. Yang&lt;/speaker&gt;&lt;text&gt; Mr. C...</td>\n",
-       "      <td>[\"Can you explain why you believe the Court sh...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Can you explain how your proposed bright-lin...</td>\n",
-       "      <td>[\"How do you respond to the argument that the ...</td>\n",
+       "      <td>[\"Can you elaborate on why a preliminary injun...</td>\n",
+       "      <td>[\"Can you clarify whether there are situations...</td>\n",
+       "      <td>[\"How do you reconcile your argument with case...</td>\n",
+       "      <td>[\"Can you clarify the relationship between int...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -172,10 +172,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Easha Anand&lt;/speaker&gt;&lt;text&gt; Mr. Chief...</td>\n",
        "      <td>&lt;speaker&gt;Easha Anand&lt;/speaker&gt;&lt;text&gt; Mr. Chief...</td>\n",
-       "      <td>[\"Isn't it true that a preliminary injunction ...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the concern...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Isn't it true that some circuits have adopte...</td>\n",
+       "      <td>[\"Can you clarify how you distinguish between ...</td>\n",
+       "      <td>[\"Could you elaborate on why the phrase \\\"dama...</td>\n",
+       "      <td>[\"How do you reconcile your interpretation of ...</td>\n",
+       "      <td>[\"How do you reconcile the usage of \\\"damages ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -185,10 +185,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Peter A. Patterson&lt;/speaker&gt;&lt;text&gt; Mr...</td>\n",
        "      <td>&lt;speaker&gt;Peter A. Patterson&lt;/speaker&gt;&lt;text&gt; Mr...</td>\n",
-       "      <td>[\"Counselor, can you explain how the bright-li...</td>\n",
-       "      <td>[\"How do you respond to the argument that a pr...</td>\n",
-       "      <td>[\"Isn't your proposed bright-line rule overly ...</td>\n",
-       "      <td>[\"Can you clarify why you believe that a preli...</td>\n",
+       "      <td>[\"Ms. Prelogar, could you elucidate on how the...</td>\n",
+       "      <td>[\"Mr. Patterson, how do you reconcile your int...</td>\n",
+       "      <td>[\"How do you respond to the argument that requ...</td>\n",
+       "      <td>[\"How do you interpret Congress's decision to ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -198,10 +198,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Kevin K. Russell&lt;/speaker&gt;&lt;text&gt; Mr. ...</td>\n",
        "      <td>&lt;speaker&gt;Kevin K. Russell&lt;/speaker&gt;&lt;text&gt; Mr. ...</td>\n",
-       "      <td>[\"Counselor, doesn't your argument rely too he...</td>\n",
-       "      <td>[\"How do you respond to the argument that the ...</td>\n",
-       "      <td>[\"Can you explain why the legislative history ...</td>\n",
-       "      <td>[\"How do you respond to the argument that a pr...</td>\n",
+       "      <td>[\"Could you explain why you believe the Ninth ...</td>\n",
+       "      <td>[\"Can you elaborate on the significance of mat...</td>\n",
+       "      <td>[\"Can you clarify how adopting the Ninth Circu...</td>\n",
+       "      <td>[\"Can you clarify what specific criteria the p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -211,10 +211,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Edmund G. LaCour, Jr.&lt;/speaker&gt;&lt;text&gt;...</td>\n",
        "      <td>&lt;speaker&gt;Edmund G. LaCour, Jr.&lt;/speaker&gt;&lt;text&gt;...</td>\n",
-       "      <td>[\"Counselor, doesn't the fact that a prelimina...</td>\n",
-       "      <td>[\"Counselor, isn't it true that your proposed ...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Doesn't the fact that a preliminary injuncti...</td>\n",
+       "      <td>[\"How do you distinguish between a neutral pro...</td>\n",
+       "      <td>[\"How does the doctrine of preemption apply in...</td>\n",
+       "      <td>[\"How do you respond to the argument that Alab...</td>\n",
+       "      <td>[\"Can you clarify how the neutral jurisdiction...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -257,47 +257,48 @@
        "4  <speaker>Edmund G. LaCour, Jr.</speaker><text>...   \n",
        "\n",
        "                      questions_sotomayor_petitioner  \\\n",
-       "0  [\"Can you explain why you believe the Court sh...   \n",
-       "1  [\"Isn't it true that a preliminary injunction ...   \n",
-       "2  [\"Counselor, can you explain how the bright-li...   \n",
-       "3  [\"Counselor, doesn't your argument rely too he...   \n",
-       "4  [\"Counselor, doesn't the fact that a prelimina...   \n",
+       "0  [\"Can you elaborate on why a preliminary injun...   \n",
+       "1  [\"Can you clarify how you distinguish between ...   \n",
+       "2  [\"Ms. Prelogar, could you elucidate on how the...   \n",
+       "3  [\"Could you explain why you believe the Ninth ...   \n",
+       "4  [\"How do you distinguish between a neutral pro...   \n",
        "\n",
        "                      questions_sotomayor_respondent  \\\n",
-       "0  [\"Counselor, how do you respond to the argumen...   \n",
-       "1  [\"Counselor, how do you respond to the concern...   \n",
-       "2  [\"How do you respond to the argument that a pr...   \n",
-       "3  [\"How do you respond to the argument that the ...   \n",
-       "4  [\"Counselor, isn't it true that your proposed ...   \n",
+       "0  [\"Can you clarify whether there are situations...   \n",
+       "1  [\"Could you elaborate on why the phrase \\\"dama...   \n",
+       "2  [\"Mr. Patterson, how do you reconcile your int...   \n",
+       "3  [\"Can you elaborate on the significance of mat...   \n",
+       "4  [\"How does the doctrine of preemption apply in...   \n",
        "\n",
-       "                          questions_alito_respondent  \\\n",
-       "0  [\"Can you explain how your proposed bright-lin...   \n",
-       "1  [\"Counselor, how do you respond to the argumen...   \n",
-       "2  [\"Isn't your proposed bright-line rule overly ...   \n",
-       "3  [\"Can you explain why the legislative history ...   \n",
-       "4  [\"Counselor, how do you respond to the argumen...   \n",
+       "                          questions_alito_petitioner  \\\n",
+       "0  [\"How do you reconcile your argument with case...   \n",
+       "1  [\"How do you reconcile your interpretation of ...   \n",
+       "2  [\"How do you respond to the argument that requ...   \n",
+       "3  [\"Can you clarify how adopting the Ninth Circu...   \n",
+       "4  [\"How do you respond to the argument that Alab...   \n",
        "\n",
-       "                          questions_alito_petitioner  \n",
-       "0  [\"How do you respond to the argument that the ...  \n",
-       "1  [\"Isn't it true that some circuits have adopte...  \n",
-       "2  [\"Can you clarify why you believe that a preli...  \n",
-       "3  [\"How do you respond to the argument that a pr...  \n",
-       "4  [\"Doesn't the fact that a preliminary injuncti...  "
+       "                          questions_alito_respondent  \n",
+       "0  [\"Can you clarify the relationship between int...  \n",
+       "1  [\"How do you reconcile the usage of \\\"damages ...  \n",
+       "2  [\"How do you interpret Congress's decision to ...  \n",
+       "3  [\"Can you clarify what specific criteria the p...  \n",
+       "4  [\"Can you clarify how the neutral jurisdiction...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_llm_questions = pd.read_csv('../datasets/2024_full_text_sotomayor_alito_questions.csv')\n",
+    "# df_llm_questions = pd.read_csv('../datasets/2024_full_text_sotomayor_alito_questions.csv')\n",
+    "df_llm_questions = pd.read_csv('../datasets/llm_outputs/generate_questions/2024_full_text_sotomayor_alito_questions_gpt-4o-2024-08-06.csv')\n",
     "df_llm_questions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "fd139723-fd1c-456f-92ee-7db71df0460e",
    "metadata": {},
    "outputs": [
@@ -416,13 +417,13 @@
        "4  <speaker>John G. Roberts, Jr.</speaker><text> ...    coherent  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_actual_questions = pd.read_csv('../datasets/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv')\n",
+    "df_actual_questions = pd.read_csv('../datasets/2024_questions/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv')\n",
     "df_actual_questions.head()"
    ]
   },
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "7ad0dba9-5a4f-4005-ba07-d333f795d9c1",
    "metadata": {},
    "outputs": [
@@ -446,7 +447,7 @@
        "13"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "dec80b76-d851-44d9-a22a-972f9a1a3567",
    "metadata": {},
    "outputs": [],
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "4b30ea56-d7ea-4aab-be9f-553db30aab89",
    "metadata": {},
    "outputs": [],
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "786c10d3-4643-4e29-a9d6-8779f779674b",
    "metadata": {},
    "outputs": [],
@@ -593,14 +594,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "c7c6e11f-62a1-4f8b-bb4f-141620d1d9fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../datasets/2024_questions_for_eval.json', 'w') as f:\n",
-    "    json.dump(results, f, indent=4)"
+    "# out_fp = '../datasets/2024_questions_for_eval.json'\n",
+    "out_fp = '../datasets/2024_questions_for_eval_gpt.json'\n",
+    "\n",
+    "with open(out_fp, 'w') as f:\n",
+    "    json.dump(results, f, indent=4)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9c5f2bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
