valence classification for gpt4 questions

--- a/llm_generation_scripts/generate_valence_classification_della_inference.ipynb
+++ b/llm_generation_scripts/generate_valence_classification_della_inference.ipynb
@@ -341,7 +341,7 @@
    "outputs": [],
    "source": [
     "out_fp = f'{out_dir}/2024_llm_questions_{model_suffix}_valence_classification.csv'\n",
-    "df_coherent.to_csv(out_fp, index=False)"
+    "df_llm.to_csv(out_fp, index=False)"
    ]
   },
   {
