generate legalbench classifications for gpt4o questions

--- a/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
+++ b/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
@@ -244,55 +244,55 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>q_5b41d397</td>\n",
+       "      <td>q_f4341b19</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Petitioner, you argue that a preliminary injun...</td>\n",
+       "      <td>Can you elaborate on why a preliminary injunct...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>q_b422b940</td>\n",
+       "      <td>q_bb41909e</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Can you provide examples of cases where a prel...</td>\n",
+       "      <td>In cases where a preliminary injunction result...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>q_0814b033</td>\n",
+       "      <td>q_61c81902</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>You rely on legal dictionaries from the time o...</td>\n",
+       "      <td>How do you address situations where the only r...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>q_11705d8e</td>\n",
+       "      <td>q_f1f17a25</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Doesn't the fact that a preliminary injunction...</td>\n",
+       "      <td>What impact would your proposed bright-line ru...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>q_55dd3b63</td>\n",
+       "      <td>q_40a17162</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>How would adopting a bright-line rule, as you ...</td>\n",
+       "      <td>Are there specific precedents from this Court ...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "    </tr>\n",
@@ -302,18 +302,18 @@
       ],
       "text/plain": [
        "   Unnamed: 0 question_id    transcript_id question_addressee    justice  \\\n",
-       "0           0  q_5b41d397  2024.23-621-t01         petitioner  sotomayor   \n",
-       "1           1  q_b422b940  2024.23-621-t01         petitioner  sotomayor   \n",
-       "2           2  q_0814b033  2024.23-621-t01         petitioner  sotomayor   \n",
-       "3           3  q_11705d8e  2024.23-621-t01         petitioner  sotomayor   \n",
-       "4           4  q_55dd3b63  2024.23-621-t01         petitioner  sotomayor   \n",
+       "0           0  q_f4341b19  2024.23-621-t01         petitioner  sotomayor   \n",
+       "1           1  q_bb41909e  2024.23-621-t01         petitioner  sotomayor   \n",
+       "2           2  q_61c81902  2024.23-621-t01         petitioner  sotomayor   \n",
+       "3           3  q_f1f17a25  2024.23-621-t01         petitioner  sotomayor   \n",
+       "4           4  q_40a17162  2024.23-621-t01         petitioner  sotomayor   \n",
        "\n",
        "                                       question_text  \\\n",
-       "0  Petitioner, you argue that a preliminary injun...   \n",
-       "1  Can you provide examples of cases where a prel...   \n",
-       "2  You rely on legal dictionaries from the time o...   \n",
-       "3  Doesn't the fact that a preliminary injunction...   \n",
-       "4  How would adopting a bright-line rule, as you ...   \n",
+       "0  Can you elaborate on why a preliminary injunct...   \n",
+       "1  In cases where a preliminary injunction result...   \n",
+       "2  How do you address situations where the only r...   \n",
+       "3  What impact would your proposed bright-line ru...   \n",
+       "4  Are there specific precedents from this Court ...   \n",
        "\n",
        "                                   opening_statement  \\\n",
        "0  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
@@ -336,8 +336,8 @@
     }
    ],
    "source": [
-    "model_suffix = model_name.split('/')[1] # UNCOMMENT FOR LLAMA\n",
-    "# model_suffix = 'gpt-4o-2024-08-06' # UNCOMMENT FOR GPT\n",
+    "# model_suffix = model_name.split('/')[1] # UNCOMMENT FOR LLAMA\n",
+    "model_suffix = 'gpt-4o-2024-08-06' # UNCOMMENT FOR GPT\n",
     "input_fp = f'{input_dir}/2024_llm_questions_{model_suffix}_qid.csv'\n",
     "df_llm = pd.read_csv(input_fp)\n",
     "df_llm.head()"
@@ -385,23 +385,23 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>q_5b41d397</td>\n",
+       "      <td>q_f4341b19</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Petitioner, you argue that a preliminary injun...</td>\n",
+       "      <td>Can you elaborate on why a preliminary injunct...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>{\\n\"classification\": \"Criticism\",\\n\"reasoning\"...</td>\n",
+       "      <td>{\\n\"classification\": \"Clarification\",\\n\"reason...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>q_b422b940</td>\n",
+       "      <td>q_bb41909e</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Can you provide examples of cases where a prel...</td>\n",
+       "      <td>In cases where a preliminary injunction result...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>{\\n\"classification\": \"Implications\",\\n\"reasoni...</td>\n",
@@ -409,38 +409,38 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>q_0814b033</td>\n",
+       "      <td>q_61c81902</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>You rely on legal dictionaries from the time o...</td>\n",
+       "      <td>How do you address situations where the only r...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>{\\n\"classification\": \"Criticism\",\\n\"reasoning\"...</td>\n",
+       "      <td>{\\n\"classification\": \"Implications\",\\n\"reasoni...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>q_11705d8e</td>\n",
+       "      <td>q_f1f17a25</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>Doesn't the fact that a preliminary injunction...</td>\n",
+       "      <td>What impact would your proposed bright-line ru...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>{\\n  \"classification\": \"Implications\",\\n  \"rea...</td>\n",
+       "      <td>{\\n\"classification\": \"Implications\",\\n\"reasoni...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>q_55dd3b63</td>\n",
+       "      <td>q_40a17162</td>\n",
        "      <td>2024.23-621-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>sotomayor</td>\n",
-       "      <td>How would adopting a bright-line rule, as you ...</td>\n",
+       "      <td>Are there specific precedents from this Court ...</td>\n",
        "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>{\\n\"classification\": \"Implications\",\\n\"reasoni...</td>\n",
+       "      <td>{\\n\"classification\": \"Background\",\\n\"reasoning...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -448,18 +448,18 @@
       ],
       "text/plain": [
        "   Unnamed: 0 question_id    transcript_id question_addressee    justice  \\\n",
-       "0           0  q_5b41d397  2024.23-621-t01         petitioner  sotomayor   \n",
-       "1           1  q_b422b940  2024.23-621-t01         petitioner  sotomayor   \n",
-       "2           2  q_0814b033  2024.23-621-t01         petitioner  sotomayor   \n",
-       "3           3  q_11705d8e  2024.23-621-t01         petitioner  sotomayor   \n",
-       "4           4  q_55dd3b63  2024.23-621-t01         petitioner  sotomayor   \n",
+       "0           0  q_f4341b19  2024.23-621-t01         petitioner  sotomayor   \n",
+       "1           1  q_bb41909e  2024.23-621-t01         petitioner  sotomayor   \n",
+       "2           2  q_61c81902  2024.23-621-t01         petitioner  sotomayor   \n",
+       "3           3  q_f1f17a25  2024.23-621-t01         petitioner  sotomayor   \n",
+       "4           4  q_40a17162  2024.23-621-t01         petitioner  sotomayor   \n",
        "\n",
        "                                       question_text  \\\n",
-       "0  Petitioner, you argue that a preliminary injun...   \n",
-       "1  Can you provide examples of cases where a prel...   \n",
-       "2  You rely on legal dictionaries from the time o...   \n",
-       "3  Doesn't the fact that a preliminary injunction...   \n",
-       "4  How would adopting a bright-line rule, as you ...   \n",
+       "0  Can you elaborate on why a preliminary injunct...   \n",
+       "1  In cases where a preliminary injunction result...   \n",
+       "2  How do you address situations where the only r...   \n",
+       "3  What impact would your proposed bright-line ru...   \n",
+       "4  Are there specific precedents from this Court ...   \n",
        "\n",
        "                                   opening_statement  \\\n",
        "0  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
@@ -476,11 +476,11 @@
        "4  <speaker>John G. Roberts, Jr.</speaker><text> ...   \n",
        "\n",
        "                       legalbench_classification_raw  \n",
-       "0  {\\n\"classification\": \"Criticism\",\\n\"reasoning\"...  \n",
+       "0  {\\n\"classification\": \"Clarification\",\\n\"reason...  \n",
        "1  {\\n\"classification\": \"Implications\",\\n\"reasoni...  \n",
-       "2  {\\n\"classification\": \"Criticism\",\\n\"reasoning\"...  \n",
-       "3  {\\n  \"classification\": \"Implications\",\\n  \"rea...  \n",
-       "4  {\\n\"classification\": \"Implications\",\\n\"reasoni...  "
+       "2  {\\n\"classification\": \"Implications\",\\n\"reasoni...  \n",
+       "3  {\\n\"classification\": \"Implications\",\\n\"reasoni...  \n",
+       "4  {\\n\"classification\": \"Background\",\\n\"reasoning...  "
       ]
      },
      "execution_count": 8,
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "458f61e5-7bea-483f-930e-12ca4497831e",
    "metadata": {},
    "outputs": [],
@@ -516,21 +516,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4a5758ed-d65f-4a49-9a62-f7030b947095",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_llm.to_csv(out_fp, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8b6ee16-4bee-421c-a9ed-e1d578cc81de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
