--- a/llm_generation_scripts/generate_metacog_clusters.ipynb
+++ b/llm_generation_scripts/generate_metacog_clusters.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dce9f408-b45f-4931-ad60-6742bf290a63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"http://localhost:12257/v1/chat/completions\"\n",
+    "# port = 12257 # CHANGE THIS TO THE PORT WHERE DELLA API SSH PORT FORWARDING IS SET UP\n",
+    "port = 19903\n",
+    "url = f\"http://localhost:{port}/v1/chat/completions\"\n",
     "\n",
     "headers={\n",
     "    \"Content-Type\": \"application/json\",\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2e7a20db-ba35-4254-b174-e376059bd1e9",
    "metadata": {},
    "outputs": [],
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "28dba16f-6115-4450-8593-0c752d017240",
    "metadata": {},
    "outputs": [],
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c6bde122",
    "metadata": {},
    "outputs": [],
@@ -144,42 +146,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8af2c801",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Process each JSON file in the input directory\n",
-    "def process_json_files(input_directory, output_directory):\n",
-    "    for file_name in os.listdir(input_directory):\n",
-    "        if file_name.endswith(\".json\"):\n",
-    "            input_file_path = os.path.join(input_directory, file_name)\n",
-    "            \n",
-    "            # Read the JSON file\n",
-    "            with open(input_file_path, 'r') as file:\n",
-    "                properties = json.load(file)\n",
-    "            \n",
-    "            # Get the model response\n",
-    "            # model_response = generate_clusters(properties)\n",
-    "            model_response = ['']\n",
-    "            \n",
-    "            # Save the response to a new JSON file\n",
-    "            output_file_path = os.path.join(output_directory, f\"cluster_raw_{file_name}\")\n",
-    "            with open(output_file_path, 'w') as output_file:\n",
-    "                json.dump(model_response, output_file, indent=4)\n",
-    "            \n",
-    "            print(f\"Processed and saved response for {file_name}\")\n",
+    "def process_json_files(input_dir, out_dir):\n",
+    "    for file_name in os.listdir(input_dir):\n",
+    "        input_fp = os.path.join(input_dir, file_name)\n",
+    "\n",
+    "        with open(input_fp, 'r') as f:\n",
+    "            properties = json.load(f)\n",
+    "        print(f\"Read and processing response for {file_name}\")\n",
+    "\n",
+    "\n",
+    "        # print(type(properties))\n",
+    "        # model_response = ['']\n",
+    "        model_response = generate_clusters(properties)\n",
+    "\n",
+    "\n",
+    "        out_fp = os.path.join(out_dir, f\"cluster_raw_{file_name}\")\n",
+    "        with open(out_fp, 'w') as f:\n",
+    "            json.dump(model_response, f, indent=4)\n",
+    "\n",
+    "        print(f\"Processed and saved response to {out_fp}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2b2a4aa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read and processing response for chunk_13.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_13.json\n",
+      "Read and processing response for chunk_11.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_11.json\n",
+      "Read and processing response for chunk_26.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_26.json\n",
+      "Read and processing response for chunk_29.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_29.json\n",
+      "Read and processing response for chunk_12.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_12.json\n",
+      "Read and processing response for chunk_2.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_2.json\n",
+      "Read and processing response for chunk_20.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_20.json\n",
+      "Read and processing response for chunk_28.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_28.json\n",
+      "Read and processing response for chunk_18.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_18.json\n",
+      "Read and processing response for chunk_16.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_16.json\n",
+      "Read and processing response for chunk_23.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_23.json\n",
+      "Read and processing response for chunk_8.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_8.json\n",
+      "Read and processing response for chunk_27.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_27.json\n",
+      "Read and processing response for chunk_3.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_3.json\n",
+      "Read and processing response for chunk_21.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_21.json\n",
+      "Read and processing response for chunk_10.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_10.json\n",
+      "Read and processing response for chunk_7.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_7.json\n",
+      "Read and processing response for chunk_14.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_14.json\n",
+      "Read and processing response for chunk_6.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_6.json\n",
+      "Read and processing response for chunk_15.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_15.json\n",
+      "Read and processing response for chunk_9.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_9.json\n",
+      "Read and processing response for chunk_24.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_24.json\n",
+      "Read and processing response for chunk_17.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_17.json\n",
+      "Read and processing response for chunk_22.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_22.json\n",
+      "Read and processing response for chunk_25.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_25.json\n",
+      "Read and processing response for chunk_4.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_4.json\n",
+      "Read and processing response for chunk_1.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_1.json\n",
+      "Read and processing response for chunk_5.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_5.json\n",
+      "Read and processing response for chunk_30.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_30.json\n",
+      "Read and processing response for chunk_19.json\n",
+      "Processed and saved response to ../analysis/metacog/clustering_responses/cluster_raw_chunk_19.json\n"
+     ]
+    }
+   ],
    "source": [
-    "input_directory = f'../analysis/metacog/label_jsons/'\n",
+    "input_directory = f'../analysis/metacog/compiled_chunks/'\n",
     "output_directory = \"../analysis/metacog/clustering_responses/\"\n",
     "\n",
     "# Run the processing\n",
@@ -197,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "research",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
