add metacog classifications

--- a/llm_generation_scripts/generate_metacog_clusters.ipynb
+++ b/llm_generation_scripts/generate_metacog_clusters.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "dce9f408-b45f-4931-ad60-6742bf290a63",
    "metadata": {},
    "outputs": [],
    "source": [
     "# port = 12257 # CHANGE THIS TO THE PORT WHERE DELLA API SSH PORT FORWARDING IS SET UP\n",
-    "port = 19903\n",
+    "port = 59967\n",
     "url = f\"http://localhost:{port}/v1/chat/completions\"\n",
     "\n",
     "headers={\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2e7a20db-ba35-4254-b174-e376059bd1e9",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "28dba16f-6115-4450-8593-0c752d017240",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "c6bde122",
    "metadata": {},
    "outputs": [],
@@ -255,12 +255,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4216867d-3a44-4d15-8e93-0480b8186519",
+   "metadata": {},
+   "source": [
+    "## Cluster chunk level clustered labels"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a1467cb",
+   "execution_count": 9,
+   "id": "af046e2e-8e7b-4b0e-a3c7-57fed96f7e3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_fp = '../analysis/metacog/metacog_clusters_compiled.json'\n",
+    "with open(input_fp, 'r') as f:\n",
+    "    properties = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d1f6532e-d2bc-430f-b882-ae9d863711a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_response = generate_clusters(properties)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "43cd37ba-3bd4-4a3d-bfb1-2af61eb39982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_fp = '../analysis/metacog/metacog_clusters_all_data_raw.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c8143191-a6a8-4d0c-b3a7-e73ca520b9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(out_fp, 'w') as f:\n",
+    "    json.dump(model_response, f, indent=4)"
+   ]
   }
  ],
  "metadata": {
