--- a/analysis/compile_metacog_clusters.ipynb
+++ b/analysis/compile_metacog_clusters.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compile metacog labels"
+    "# Compile metacog CLUSTERS"
    ]
   },
   {
@@ -22,12 +22,98 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Compile metacog clusters for all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = 'metacog/metacog_clusters_all_data_raw.json'\n",
+    "with open(fp, 'r') as f:\n",
+    "    clusters_str = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters_str = clusters_str.replace('json\\n', '')\n",
+    "clusters_str = clusters_str.replace('```', '')\n",
+    "clusters_clean = json.loads(clusters_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_fp = 'metacog/metacog_clusters_all_data_clean.json'\n",
+    "with open(out_fp, 'w') as f:\n",
+    "    json.dump(clusters_clean, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'category_name': 'statutory_interpretation',\n",
+       "  'description': 'Properties related to the interpretation and application of statutes.'},\n",
+       " {'category_name': 'precedent_and_doctrine',\n",
+       "  'description': 'Properties related to the examination and application of precedents and doctrines.'},\n",
+       " {'category_name': 'case_facts_and_context',\n",
+       "  'description': 'Properties related to the examination of case facts and context.'},\n",
+       " {'category_name': 'judicial_role_and_review',\n",
+       "  'description': 'Properties related to the examination of the judicial role and review.'},\n",
+       " {'category_name': 'argumentation_and_clarification',\n",
+       "  'description': 'Properties related to the examination of argumentation and clarification.'},\n",
+       " {'category_name': 'constitutional_issues',\n",
+       "  'description': 'Properties related to the examination of constitutional issues.'},\n",
+       " {'category_name': 'procedural_matters',\n",
+       "  'description': 'Properties related to the examination of procedural matters.'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clusters_list = [{\n",
+    "    'category_name': c['category_name'],\n",
+    "    'description': c['description']\n",
+    "    }\n",
+    "    for c in clusters_clean]\n",
+    "clusters_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compile metacog clusters for chunks"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -339,7 +425,13 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -360,7 +452,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -557,7 +655,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "research",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -571,9 +669,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
