change ft keys to instruction output

--- a/data_cleaning_scripts/script_prep_data_for_finetuning.ipynb
+++ b/data_cleaning_scripts/script_prep_data_for_finetuning.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Process Raw Data: Parse original Oyez transcript jsons and output `finetuning_data_processed.jsonl`. Each line has the following keys: `{\"system_prompt\",\"user_prompt\", \"response\", \"transcript_id\", \"justice\"}`\n",
+    "1. Process Raw Data: Parse original Oyez transcript jsons and output `finetuning_data_processed.jsonl`. Each line has the following keys: `{\"system_prompt\",\"instruction\", \"output\", \"transcript_id\", \"justice\"}`\n",
     "1. Filter Processed Data: \n",
     "    1. Filter out non-question samples, i.e. where the response > 50 chars and has \"?\" in it and does not have \"inaudible\" in it.\n",
     "    1. Filter out samples where the responding justice is not one of the current Supreme Court justices\n",
@@ -33,7 +33,7 @@
     "        \"You are a Supreme Court Justice participating in oral arguments. \"\n",
     "        \"Given a transcript excerpt and a Justice's name, generate the Justice's next question in response to the conversation history.\"\n",
     "    ),\n",
-    "    \"user_prompt\":(\n",
+    "    \"instruction\":(\n",
     "        \"<context>\\n\"\n",
     "        \"<turn>Jameson R. Jones: Mr. Chief Justice, and may it please the Court: As some of this questioning indicated, if any party has standing under Section 43(a) of the Lanham Act, it's a party whose goods are misrepresented in false advertising. To remove any doubt about that question, Congress amended the statute in 1988 to ensure a cause of action when a false advertiser misrepresents the goods or commercial services of, quote, \\u2036 another person \\u2033, end quote. This Court's zone of interest analysis shows that parties whose goods are disparaged, either expressly or by necessary implication, must have standing to sue. Lexmark's simply wrong about the idea that the zone of interest analysis in the Lanham Act does not impose limits upon who may sue. As the hypothetical with respect to the Bailey's Ice Cream Parlor shows, you can look to the subject matter of the false advertisement to see whose goodwill and commercial activities are related to the falsity of the statement. And those who come within the falsity and the subject matter of the advertisement at issue should have standing, while those who may have tangential injuries would not.<\\/turn>\\n\"\n",
     "        \"<turn>Justice Antonin Scalia: How do you -- how do you square that with the statutory provision that the purpose of the law is to prevent unfair competition? Unfair competition, not unfair trade practices? Unfair competition?<\\/turn>\\n\"\n",
@@ -42,7 +42,7 @@
     "        \"<justice>Justice Samuel A. Alito, Jr.<\\/justice>\\n\"\n",
     "        \"Generate a question that Justice Samuel A. Alito, Jr. is likely to ask next.\"\n",
     "    ),\n",
-    "    \"response\": (\n",
+    "    \"output\": (\n",
     "        \"Justice Samuel A. Alito, Jr.: Suppose the comments in this case only disparaged the cartridges themselves and not the chips. \"\n",
     "        \"Then would the chip manufacturer, would your client have standing?\"\n",
     "    ),\n",
@@ -132,14 +132,14 @@
     "            \"You are a Supreme Court Justice participating in oral arguments. \"\n",
     "            \"Given a transcript excerpt and a Justice's name, generate the Justice's next question in response to the conversation history.\"\n",
     "        ),\n",
-    "        \"user_prompt\": (\n",
+    "        \"instruction\": (\n",
     "            \"<context>\\n\" +\n",
     "            \"\\n\".join([f\"<turn>{turn['speaker_name']}: {turn['text']}</turn>\" for turn in context_turns]) +\n",
     "            \"\\n</context>\\n\" +\n",
     "            f\"<justice>{justice_name}</justice>\\n\" +\n",
     "            f\"Generate a question that {justice_name} is likely to ask next.\"\n",
     "        ),\n",
-    "        \"response\": f\"{justice_name}: {justice_turn['text']}\",\n",
+    "        \"output\": f\"{justice_name}: {justice_turn['text']}\",\n",
     "        \"transcript_id\": transcript_id,\n",
     "        \"justice\": justice_name,\n",
     "    }\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
     "\n",
     "print(f\"# samples BEFORE filtering: {len(df)}\")\n",
     "# Filter data\n",
-    "df = df[df['response'].apply(filter_questions)]\n",
+    "df = df[df['output'].apply(filter_questions)]\n",
     "df = df[df['justice'].apply(filter_justices)]\n",
     "print(f\"# samples AFTER filtering: {len(df)}\")\n",
     "print(f\"# samples by {df['justice'].value_counts()}\")\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
