70B inference, question generation and sanity check notebooks

--- a/data_cleaning_scripts/script_clean_finetuned_inference.ipynb
+++ b/data_cleaning_scripts/script_clean_finetuned_inference.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,11 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "in_file = \"../datasets/llm_outputs/finetuned_inference/raw/Meta-Llama-3.1-8B-Instruct-bnb-4bit_inference_oral_arg_test_901.jsonl\"\n",
-    "out_file = \"../datasets/llm_outputs/finetuned_inference/processed/Meta-Llama-3.1-8B-Instruct-bnb-4bit_inference_oral_arg_test_901.jsonl\"\n",
+    "# in_file = \"../datasets/llm_outputs/finetuned_inference/raw/Meta-Llama-3.1-8B-Instruct-bnb-4bit_inference_oral_arg_test_901.jsonl\"\n",
+    "in_file = \"../datasets/llm_outputs/finetuned_inference/raw/Llama-3.3-70B-Instruct-bnb-4bit_inference_oral_arg_test_201.jsonl\"\n",
+    "\n",
+    "# out_file = \"../datasets/llm_outputs/finetuned_inference/processed/Meta-Llama-3.1-8B-Instruct-bnb-4bit_inference_oral_arg_test_901.jsonl\"\n",
+    "out_file = \"../datasets/llm_outputs/finetuned_inference/processed/Llama-3.3-70B-Instruct-bnb-4bit_inference_oral_arg_test_201.jsonl\"\n",
     "\n",
     "df = pd.read_json(in_file, lines=True)\n",
     "\n",
